Thêm phân quyền đăng nhập và chức năng quản lý nhân viên

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.UDQLNhaHangOrderZone"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.ttPersonnelManagementActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ttResetpasswordActivity"
             android:exported="false" />
         <activity
