--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+C:\Users\DELL\AndroidStudioProjects\PTUDDiDong_Nhom24_64HTTT4\app\src\main\res\raw\service_account.json
+
+
